# c-rest-api

./: .gitignore  CMakeLists.txt  Makefile  README.md  c-rest-api.h  run_tests.sh
src/: datatypes.c  datatypes.h  http.c  http.h  main.c  options.h  server.c  server.h  socketcon.h
src/requests/: request.c  request.h
src/utils/: hashtable.c  hashtable.h  json.c  json.h  memory.c  memory.h
tests/: check_json.c  check_server.c
tests/html/: index.html  javascript.js  style.css
tests/integration/: i_simpleapi.c  i_simpleapi.py  i_staticfiles.c  i_staticfiles.py
